--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -26,3 +26,11 @@
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+main {
+    min-width: 320px;
+}
+
+.rubai {
+    text-align: left;
+    }
