fixed after opening project

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,9 +2,9 @@
 
 <PageTitle>Главная</PageTitle>
 
-<div class="container text-center">
+<div class="container">
 
-    <img src="/images/khayyam.png" />
+    <img src="/images/khayyam.png" alt=""/>
 
     <div>
         <span><i>Ома́р Хайя́м Нишапури́</i></span>
