--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -45,6 +45,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -58,14 +59,46 @@ body {
     color: #000000;
     overflow-wrap: break-word;
     /* перенос слов на другую строку */
+    width: 100%;
+    min-width: 320px;
+    height: 100vh;
 }
 
 .container {
-    min-width: 320px;
-    max-width: 100%;
+    
+}
+
+[class^="box"] {
+   outline: 2px solid brown;
 }
 /*================================================================================*/
+
+.imagebox {
+    max-width: 100%;
+}
+
 .rubai {
     font-family: monotypecorsiva, Arial, Helvetica, sans-serif;
+}
+
+/*=========================================================================*/
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
 }
 
