--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Оиар Хайям Рубаи</PageTitle>
+<PageTitle>Омар Хайям Рубаи</PageTitle>
 
 <div class="container">
     <div class="row pt-4">
